--- a/doc/Learning_quarto.qmd
+++ b/doc/Learning_quarto.qmd
@@ -2,25 +2,38 @@
 title: "Reproducible document"
 author: "Maria"
 format: html
+editor_options: 
+  chunk_output_type: inline
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
 ```{r}
-1 + 1
+2+2
 ```
 
-You can add options to executable code like this 
+```{r setup}
+#| message: false
+#| warning: false
 
-```{r}
-#| echo: false
-2 * 2
+library(tidyverse)
+library(NHANES)
+nhanes_small <- read_csv(here::here("data/nhanes_small.csv"))
+
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+```{r}
+nhanes_small
+
+```
+
+## Table of results
+```{r mean-age-bmi-table}
+nhanes_small %>%
+  filter(!is.na(diabetes), !is.na(education)) %>%
+  group_by(diabetes, education) %>%
+  summarise(
+    mean_age = mean(age, na.rm = TRUE),
+    mean_bmi = mean(bmi, na.rm = TRUE)
+  ) %>%
+  ungroup()
+```
+
