--- a/doc/Learning_quarto.qmd
+++ b/doc/Learning_quarto.qmd
@@ -204,27 +204,27 @@ nhanes_exercise <- NHANES %>%
 #| label: fig-exercise-diabetes
 #| fig-cap: "Distribution of age in diabetes"
 #| layout-ncol: 2
-#| fig-subcap: 
+#| fig-subcap:
 #|   - "Distribution of age"
 #|   - "Distribution of age when onset of diabetes"
 
 
 # Distribution of age
 ggplot(nhanes_exercise, aes(x = age)) +
-    geom_histogram(na.rm = TRUE)
+  geom_histogram(na.rm = TRUE)
 
 # Distribution of age at diabetes diagnosis
 ggplot(nhanes_exercise, aes(x = diabetes_age)) +
-    geom_histogram(na.rm = TRUE)
+  geom_histogram(na.rm = TRUE)
 ```
 
 ```{r}
-#Exercise 9.5.3
+# Exercise 9.5.3
 
 # Number of people who smoke now and are or above 20 years of age,
 # removing those with missing smoking status.
-nhanes_exercise %>% 
-  filter(age >= 20, !is.na(smoke_now)) %>% 
+nhanes_exercise %>%
+  filter(age >= 20, !is.na(smoke_now)) %>%
   ggplot(aes(x = smoke_now)) +
   geom_bar()
 ```
@@ -233,11 +233,11 @@ nhanes_exercise %>%
 # Exercise 9.5.4
 
 # BMI in relation to mean arterial pressure
-nhanes_exercise %>% 
-  mutate(mean_arterial_pressure = (___ + (2 * ___)) / 3) %>% 
-  ggplot(aes(x = ___, y = ___)) +
-  ___(na.rm = TRUE) +
-  ___()
+nhanes_exercise %>%
+  mutate(mean_arterial_pressure = (bp_sys_ave + (2 * bp_dia_ave)) / 3) %>%
+  ggplot(aes(x = bmi, y = mean_arterial_pressure)) +
+  geom_hex(na.rm = TRUE) +
+  geom_smooth()
 ```
 
 ### Plotting three or more variables
@@ -245,56 +245,55 @@ nhanes_exercise %>%
 ```{r}
 # Plotting systolic blood pressure in relation to educational status and diabetes
 
-nhanes_small %>% 
-    filter(!is.na(diabetes), !is.na(education)) %>% 
-    ggplot(aes(x = education, y = bp_sys_ave, colour = diabetes)) +
-    geom_boxplot(na.rm = TRUE)
+nhanes_small %>%
+  filter(!is.na(diabetes), !is.na(education)) %>%
+  ggplot(aes(x = education, y = bp_sys_ave, colour = diabetes)) +
+  geom_boxplot(na.rm = TRUE)
 ```
 
 ```{r}
 # Plotting BMI in relation to systolic blood pressure and age
 
-nhanes_small %>% 
-    ggplot(aes(x = bmi, y = bp_sys_ave, color = age)) +
-    geom_point(na.rm = TRUE)
+nhanes_small %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave, color = age)) +
+  geom_point(na.rm = TRUE)
 ```
 
 ```{r}
 # Plot BMI in relation to systolic blood pressure and diabetes status
-nhanes_small %>% 
-    filter(!is.na(diabetes)) %>% 
-    ggplot(aes(x = bmi, y = bp_sys_ave, color = diabetes)) +
-    geom_point(na.rm = TRUE)
+nhanes_small %>%
+  filter(!is.na(diabetes)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave, color = diabetes)) +
+  geom_point(na.rm = TRUE)
 ```
 
 ```{r}
 # Plot BMI in relation to systolic blood pressure and diabetes, using faceting by columns
 
-nhanes_small %>% 
-    filter(!is.na(diabetes)) %>% 
-    ggplot(aes(x = bmi, y = bp_sys_ave)) +
-    geom_point(na.rm = TRUE) +
-    facet_grid(cols = vars(diabetes))
+nhanes_small %>%
+  filter(!is.na(diabetes)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave)) +
+  geom_point(na.rm = TRUE) +
+  facet_grid(cols = vars(diabetes))
 ```
 ```{r}
 # Plot BMI in relation to systolic blood pressure and diabetes, using faceting by rows
 
-nhanes_small %>% 
-    filter(!is.na(diabetes)) %>% 
-    ggplot(aes(x = bmi, y = bp_sys_ave)) +
-    geom_point(na.rm = TRUE) +
-    facet_grid(rows = vars(diabetes))
+nhanes_small %>%
+  filter(!is.na(diabetes)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave)) +
+  geom_point(na.rm = TRUE) +
+  facet_grid(rows = vars(diabetes))
 ```
 ```{r}
 # Plot BMI in relation to systolic blood pressure, diabetes status, educational status and age
 
-nhanes_small %>% 
-    filter(!is.na(diabetes), !is.na(education)) %>% 
-    ggplot(aes(x = bmi, y = bp_sys_ave, color = age)) +
-    geom_point(na.rm = TRUE) +
-    facet_grid(
-        rows = vars(diabetes),
-        cols = vars(education)
-    )
+nhanes_small %>%
+  filter(!is.na(diabetes), !is.na(education)) %>%
+  ggplot(aes(x = bmi, y = bp_sys_ave, color = age)) +
+  geom_point(na.rm = TRUE) +
+  facet_grid(
+    rows = vars(diabetes),
+    cols = vars(education)
+  )
 ```
-
